Fix some minor layout issues
Add demo inputs

--- a/App/ClientApp/src/global.css
+++ b/App/ClientApp/src/global.css
@@ -101,7 +101,7 @@ section h3 {
 	background: #222;
 	border-radius: 7px;
 	box-shadow: 0px 0px 3px black inset;
-	display: inline-flex;
+	display: flex;
 	flex-flow: wrap;
 	padding: 10px;
 	position: relative;
